Update through Chapter 30

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -267,26 +267,26 @@
 <p class="itemText">And Queen Mâkĕdâ arrived in Jerusalem, and brought to the King very many precious gifts which he greatly desired to possess. And he paid her great honor and rejoiced, and he gave her a habitation in the royal palace near him. And he sent her food both for the morning and evening meal, each time fifteen measures by the ḳôrî of finely ground white meal, cooked with oil and gravy and sauce in abundance, and 30 measures by the ḳôrî of crushed white meal from which bread for 350 people was made, with...</p>
 </li>
 <li>
-<p class="itemTitle">How the King held converse with the Queen</p>
-<p class="itemText">And the Queen Mâkĕdâ spake unto King Solomon, saying, “Blessed art thou, my lord, in that such wisdom and understanding have been given unto thee. For myself I only wish that I could be as one of the least of thine handmaidens, so that I could wash thy feet, and hearken to thy wisdom, and apprehend thy understanding, and serve thy majesty, and enjoy thy wisdom. O how greatly have pleased me thy answering, and the sweetness of thy voice, and the beauty of thy going, and the graciousness of thy wo...</p>
+<p class="itemTitle">How the King engaged in conversation with the Queen</p>
+<p class="itemText">And Queen Mâkĕdâ spoke to King Solomon, saying, “Blessed are you, my lord, in that such wisdom and understanding have been given to you. For myself I only wish that I could be as one of the least of your handmaidens, so that I could wash your feet, listen to your wisdom, apprehend your understanding, serve your majesty, and enjoy your wisdom. Oh how greatly have pleased me your answering, and the sweetness of your voice, and the beauty of your going, and the graciousness of your words, and the r...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the Labourer</p>
-<p class="itemText">And as Solomon was talking in this wise with the Queen, he saw a certain labourer carrying a stone upon his head and a skin of water upon his neck and shoulders, and his food and his sandals were [tied] about his loins, and there were pieces of wood in his hands; his garments were ragged and tattered, the sweat fell in drops from his face, and water from the skin of water dripped down upon his feet. And the labourer passed before Solomon, and as he was going by the King said unto him, “Stand sti...</p>
+<p class="itemText">And as Solomon was talking in this manner with the Queen, he saw a certain laborer carrying a stone upon his head and a skin of water upon his neck and shoulders, and his food and his sandals were tied about his loins, and there were pieces of wood in his hands; his garments were ragged and tattered, the sweat fell in drops from his face, and water from the skin of water dripped down upon his feet. And the laborer passed before Solomon, and as he was going by the King said to him, “Stand still;”...</p>
 </li>
 <li>
 <p class="itemTitle">How Solomon gave Commandments to the Queen</p>
-<p class="itemText">And the King answered and said unto her, “Verily, it is right that they (i.e.,men) should worship God, Who created the universe, the heavens and the earth, the sea and the dry land, the sun and the moon, the stars and the brilliant bodies of the heavens, the trees and the stones, the beasts and the feathered fowl, the wild beasts and the crocodiles, the fish and the whales, the hippopotamuses and the water lizards, the lightnings and the crashes of thunder, the clouds and the thunders, and the g...</p>
+<p class="itemText">And the King answered and said to her, “Certainly, it is right that men should worship God, Who created the universe, the heavens and the earth, the sea and the dry land, the sun and the moon, the stars and the brilliant bodies of the heavens, the trees and the stones, the beasts and the feathered fowl, the wild beasts and the crocodiles, the fish and the whales, the hippopotamuses and the water lizards, the lightnings and the crashes of thunder, the clouds and the thunders, and the good and the...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the Three Hundred and Eighteen [Patriarchs]</p>
-<p class="itemText">Now we ordain even as did they. We know well what the Apostles who were before us spake. We the Three Hundred and Eighteen have maintained and laid down the orthodox faith, our Lord Jesus Christ being with us. And He hath directed us what we should teach, and how we should fashion the faith.</span></p></p>
+<p class="itemTitle">Concerning the 318 Patriarchs</p>
+<p class="itemText">Now we ordain even as they did. We know well what the Apostles who were before us spoke. We the 318 have maintained and laid down the orthodox faith, our Lord Jesus Christ being with us. And He has directed us what we should teach, and how we should fashion the faith.</span></p></p>
 <p class="itemText"><p class="p1"><span class="s1">[The Narrative of Solomon and the Queen of Sheba continued]</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And King Solomon sent a message unto the Queen, saying, “Now that thou hast come here why wilt thou go away without seeing the administration of th...</p>
+<p class="itemText"><p class="p1"><span class="s1">And King Solomon sent a message to the Queen, saying, “Now that you have come here why will you go away without seeing the administration of the kingdom, and how the meals...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning how King Solomon swore to the Queen</p>
-<p class="itemText">And Solomon answered and said unto her, “I swear unto thee that I will not take thee by force, but thou must swear unto me that thou wilt not take by force anything that is in my house.” And the Queen laughed and said unto him, “Being a wise man why dost thou speak as a fool? Shall I steal anything, or shall I carry out of the house of the King that which the King hath not given to me? Do not imagine that I have come hither through love of riches. Moreover, my own kingdom is as wealthy as thine,...</p>
+<p class="itemText">And Solomon answered and said to her, “I swear to you that I will not take you by force, but you must swear to me that you will not take by force anything that is in my house.” And the Queen laughed and said to him, “Being a wise man why do you speak as a fool? Shall I steal anything, or shall I carry out of the house of the King that which the King has not given to me? Do not imagine that I have come here through love of riches. Moreover, my own kingdom is as wealthy as yours, and there is noth...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the sign which Solomon gave the Queen</p>
