Cleanup up to Ch. 35

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -290,23 +290,23 @@
 </li>
 <li>
 <p class="itemTitle">Concerning the sign which Solomon gave the Queen</p>
-<p class="itemText">And the Queen rejoiced, and she went forth in order to depart, and the King set her on her way with great pomp and ceremony. And Solomon took her aside so that they might be alone together, and he took off the ring that was upon his little finger, and he gave it to the Queen, and said unto her, “Take [this] so that thou mayest not forget me. And if it happen that I obtain seed from thee, this ring shall be unto it a sign; and if it be a man child he shall come to me; and the peace of God be with...</p>
+<p class="itemText">And the Queen rejoiced, and she went forth in order to depart, and the King set her on her way with great pomp and ceremony. And Solomon took her aside so that they might be alone together, and he took off the ring that was upon his little finger, and he gave it to the Queen, and said to her, “Take this so that you may not forget me. And if it happens that I obtain a descendant from you, this ring shall be to the child a sign; and if the child be a boy he shall come to me; and the peace of God b...</p>
 </li>
 <li>
 <p class="itemTitle">How the Queen brought forth and came to her own Country</p>
-<p class="itemText">And the Queen departed and came into the country of Bâlâ Zadîsârĕyâ nine months and five days after she had separated from King Solomon. And the pains of childbirth laid hold upon her, and she brought forth a man child, and she gave it to the nurse with great pride and delight. And she tarried until the days of her purification were ended, and then she came to her own country with great pomp and ceremony. And her officers who had remained there brought gifts to their mistress, and made obeisance...</p>
+<p class="itemText">And the Queen departed and arrived in the country of Bâlâ Zadîsârĕyâ nine months and five days after she had separated from King Solomon. After enduring the pains of childbirth, she delivered a boy, and she gave it to the nurse with great pride and delight. And she lingered until the days of her purification were ended, and then she came to her own country with great pomp and ceremony. And her officers who had remained there brought gifts to their mistress, and paid respect to her, and did homag...</p>
 </li>
 <li>
-<p class="itemTitle">How the King of Ethiopia travelled</p>
-<p class="itemText">And the Queen called Tâmrîn, the chief of her caravan men and merchants, and she said unto him, “Get ready for thy journey and take this young man with thee, for he importuneth me by night and by day. And thou shalt take him to the King and shalt bring him back hither in safety, if God, the Lord of Israel, pleaseth.” And she prepared a retinue suitable to their wealth and honourable condition, and made ready all the goods that were necessary for the journey, and for presenting as gifts to the Ki...</p>
+<p class="itemTitle">How the King of Ethiopia traveled</p>
+<p class="itemText">And the Queen called Tâmrîn, the chief of her caravan men and merchants, and she said to him, “Get ready for your journey and take this young man with you, for he pesters me by night and by day. And you shall take him to the King and shall bring him back here safely, if God, the Lord of Israel, pleases.” And she prepared a retinue suitable to their wealth and honorable condition, and made ready all the goods that were necessary for the journey, and for presenting as gifts to the King, and all th...</p>
 </li>
 <li>
 <p class="itemTitle">How the young man arrived in his mother’s country</p>
-<p class="itemText">And when the young man arrived in his mother’s country he rejoiced there in the honour [which he received], and in the gifts [that were made] to him. And when the people saw him they thought him to be the perfect likeness of Solomon the King. And they made obeisance to him, and they said unto him, “Hail, the royal father liveth!” And they brought unto him gifts and offerings, fatted cattle and food, as to their king. And [the people of] the whole country of Gâzâ, as far as the border of Judah, w...</p>
+<p class="itemText">And when the young man arrived in his mother’s country he rejoiced there in the honor which he received, and in the gifts that were made to him. And when the people saw him they thought him to be the perfect likeness of Solomon the King. And they made obeisance to him, and they said to him, “Hail, the royal father lives!” And they brought to him gifts and offerings, fatted cattle and food, as to their king. And the people of the whole country of Gâzâ, as far as the border of Judah, were stirred ...</p>
 </li>
 <li>
 <p class="itemTitle">How King Solomon sent to his son the commander of his army</p>
-<p class="itemText">And Solomon the King sent the commander of his army, on whose hand he was wont to lean, with gifts and meat and drink to entertain that traveller. And the commander set out with a great number of wagons, and he came to Bayna Leḥkem, and embraced him, and gave him everything that Solomon the King had sent unto him. And he said unto him, “Make haste and come with me, for the heart of the King is burnt up as with fire with the love of thee. Peradventure he will find out for himself whether thou art...</p>
+<p class="itemText">And Solomon the King sent the commander of his army, on whose hand he was accustomed to lean, with gifts and meat and drink to entertain that traveller. And the commander set out with a great number of wagons, and he came to Menyelek, and embraced him, and gave him everything that Solomon the King had sent to him. And he said to him, “Go quickly and come with me, for the heart of the King is burnt up as with fire with the love of you. Perhaps he will find out for himself whether you are his own ...</p>
 </li>
 <li>
 <p class="itemTitle">How King Solomon held intercourse with his son</p>
