Update up to Ch. 40

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -309,25 +309,25 @@
 <p class="itemText">And Solomon the King sent the commander of his army, on whose hand he was accustomed to lean, with gifts and meat and drink to entertain that traveller. And the commander set out with a great number of wagons, and he came to Menyelek, and embraced him, and gave him everything that Solomon the King had sent to him. And he said to him, “Go quickly and come with me, for the heart of the King is burnt up as with fire with the love of you. Perhaps he will find out for himself whether you are his own ...</p>
 </li>
 <li>
-<p class="itemTitle">How King Solomon held intercourse with his son</p>
-<p class="itemText">And Joas (Benaiah), the son of Yôdâḥê, went out and brought Bayna Leḥkem inside. And when King Solomon saw him he rose up, and moved forward to welcome him, and he loosed the band of his apparel from his shoulder, and he embraced him, with his hands [resting] on his breast, and he kissed his mouth, and forehead, and eyes, and he said unto him, “Behold, my father David hath renewed his youth and hath risen from the dead.” And Solomon the King turned round to those who had announced the arrival of...</p>
+<p class="itemTitle">How King Solomon dealt with his son</p>
+<p class="itemText">And Benaiah, the son of Yôdâḥê, went out and brought Bayna Leḥkem inside. And when King Solomon saw him he rose up, and moved forward to welcome him, and he loosed the band of his apparel from his shoulder, and he embraced him, with his hands resting on his breast, and he kissed his mouth, and forehead, and eyes, and he said to him, “Behold, my father David has renewed his youth and has risen from the dead.” And Solomon the King turned around to those who had announced the arrival of the young m...</p>
 </li>
 <li>
-<p class="itemTitle">How Solomon asked His Son Questions</p>
-<p class="itemText">And again Solomon held converse with his son when he was alone, and he said unto him, “Why dost thou wish to depart from me? What dost thou lack here that thou wouldst go to the country of the heathen? And what is it that driveth thee to forsake the kingdom of Israel?”</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And his son answered and said unto him, “It is impossible for me to live here. Nay, I must go to my mother, thou favouring me with thy blessing. For thou hast a son who is better than I am, namely Îyôrbe‘âm (Rehoboam) who was born...</p>
+<p class="itemTitle">How Solomon asked his son questions</p>
+<p class="itemText">And again Solomon had a conversation with his son when he was alone, and he said to him, “Why do you wish to depart from me? What do you lack here that you would go to the country of the heathen? And what is it that drives you to forsake the kingdom of Israel?”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And his son answered and said to him, “It is impossible for me to live here. Nay, I must go to my mother, you favoring me with you blessing. For you have a son who is better than I am, namely Rehoboam who was born of your wife lawfully, w...</p>
 </li>
 <li>
 <p class="itemTitle">How the King planned to send away his son with the children of the nobles</p>
-<p class="itemText">And then Solomon the King went back into his house, and he caused to be gathered together his councillors, and his officers, and the elders of his kingdom, and he said unto them, “I am not able to make this young man consent [to dwell here]. And now, hearken ye unto me and to what I shall say unto you. Come, let us make him king of the country of Ethiopia, together with your children; ye sit on my right hand and on my left hand, and in like manner the eldest of your children shall sit on his rig...</p>
+<p class="itemText">And then Solomon the King went back into his house, and he caused to be gathered together his councillors, and his officers, and the elders of his kingdom, and he said to them, “I am not able to make this young man consent to dwell here. And now, listen you to me and to what I shall say to you. Come, let us make him king of the country of Ethiopia, together with your children; you sit on my right hand and on my left hand, and in like manner the eldest of your children shall sit on his right hand...</p>
 </li>
 <li>
-<p class="itemTitle">How they made the Son of Solomon King</p>
-<p class="itemText">And they made ready the ointment of the oil of kingship, and the sounds of the large horn, and the small horn, and the flute and the pipes, and the harp and the drum filled the air; and the city resounded with cries of joy and gladness. And they brought the young man into the Holy of Holies, and he laid hold upon the horns of the altar, and sovereignty was given unto him by the mouth of Zadok the priest, and by the mouth of Joas (Benaiah) the priest, the commander of the army of King Solomon, an...</p>
+<p class="itemTitle">How they made the son of Solomon King</p>
+<p class="itemText">And they made ready the ointment of the oil of kingship, and the sounds of the large horn, and the small horn, and the flute and the pipes, and the harp and the drum filled the air; and the city resounded with cries of joy and gladness. And they brought the young man into the Holy of Holies, and he laid hold upon the horns of the altar, and sovereignty was given to him by the mouth of Zadok the priest, and by the mouth of Benaiah the priest, the commander of the army of King Solomon, and he anoi...</p>
 </li>
 <li>
 <p class="itemTitle">How Zadok the priest gave commands to David the King</p>
-<p class="itemText">And Zadok the priest answered and said unto the young man, “Hearken unto what I shall say unto thee. And if thou wilt perform it thou shalt live to God, and if thou dost not God will punish thee, and thou shalt become the least of all the nations, and thou shalt be vanquished by thy foes. And God shall turn away His face from thee, and thou shalt be dismayed, and sad, and sorrowful in thy heart, and thy sleep shall be without refreshing and health. And hearken unto the word of God, and perform i...</p>
+<p class="itemText">And Zadok the priest answered and said to the young man, “Listen to what I shall say to you. And if you will perform it you shall live to God, and if you do not God will punish you, and you shall become the least of all the nations, and you shall be vanquished by your foes. And God shall turn away His face from you, and you shall be dismayed, and sad, and sorrowful in your heart, and your sleep shall be without refreshment and health. And listen to the word of God, and perform it, and withdraw n...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the blessing of Kings</p>
