Cleanup up to Ch. 45

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -331,23 +331,23 @@
 </li>
 <li>
 <p class="itemTitle">Concerning the blessing of Kings</p>
-<p class="itemText">“Hearken thou now to the blessing that shall come upon thee, if thou wilt do the Will of God. Thou shalt be blessed in all thy ways, blessed shalt thou be in the city, blessed shalt thou be in the field, blessed shalt thou be in thy house, blessed shalt thou be outside it, and blessed shall be the fruit of thy belly. And those who were gathered together said, Amen. Blessed shall be the fruit of thy land. Amen. Blessed shall be the fountains of thy waters. Amen. Blessed shall be the fruit that th...</p>
+<p class="itemText">“Listen you now to the blessing that shall come upon you, if you will do the Will of God. You shall be blessed in all your ways, blessed shall you be in the city, blessed shall you be in the field, blessed shall you be in your house, blessed shall you be outside it, and blessed shall be the fruit of your belly. And those who were gathered together said, Amen. Blessed shall be the fruit of your land. Amen. Blessed shall be the fountains of your waters. Amen. Blessed shall be the fruit that you ha...</p>
 </li>
 <li>
 <p class="itemTitle">Concerning the Ten Commandments</p>
-<p class="itemText">“And hear ye, Israel, that which God commandeth you to keep; He saith, ‘I am the Lord thy God Who hath brought thee out of the land of Egypt and out of the house of bondage. There shall be no other gods besides Me, and thou shalt not make any god that is graven, and no god that is like what is in the heavens above, or in the earth beneath, or in the water which is under the earth. Thou shalt not bow down to them, and thou shalt not serve them, for I the Lord thy God am a jealous God. [I am He] W...</p>
+<p class="itemText">“And hear you, Israel, that which God commands you to keep; He said, ‘I am the Lord your God Who has brought you out of the land of Egypt and out of the house of bondage. There shall be no other gods besides Me, and you shall not make any god that is graven, and no god that is like what is in the heavens above, or in the earth beneath, or in the water which is under the earth. You shall not bow down to them, and you shall not serve them, for I the Lord your God am a jealous God. I am He Who visi...</p>
 </li>
 <li>
-<p class="itemTitle">How the men of the Army of Israel received [their] orders</p>
-<p class="itemText">And the city rejoiced because the King had made his son King, and had appointed him King from his own territory to that of another. But the city sorrowed also because the King had commanded that they should give their children who were called “firstborn.” And those who were on the right hand should sit in the same way as their fathers sat with King Solomon, even so should they sit at the right hand of his son David, the King of Ethiopia; and those who were on the left hand should sit as their fa...</p>
+<p class="itemTitle">How the men of the Army of Israel received their orders</p>
+<p class="itemText">And the city rejoiced because the King had made his son King, and had appointed him King from his own territory to that of another. But the city sorrowed also because the King had commanded that they should give their children who were called “firstborn.” And those who were on the right hand should sit in<span class="Apple-converted-space">  </span>the same way as their fathers sat with King Solomon, even so should they sit at the right hand of his son Menyelek, the King of Ethiopia; and those who were on the left hand should sit as thei...</p>
 </li>
 <li>
-<p class="itemTitle">How it is not a seemly thing to revile the King</p>
-<p class="itemText">Now it is not a seemly thing to revile the king, for he is the anointed of God. It is neither seemly nor good. If he doeth that which is good he will not suffer loss in three kingdoms: First, God shall overthrow for him his enemy, and he shall not be seized by the hand of his enemy. Secondly, God shall make him reign with Him and with His righteousness, and shall make him to sit on His right hand. Thirdly, God shall make him to reign upon earth with glory and joy, and shall direct his kingdom fo...</p>
+<p class="itemTitle">How it is not a proper thing to revile the King</p>
+<p class="itemText">Now it is not a proper thing to revile the king, for he is the anointed of God. It is neither proper nor good. If he does that which is good he will not suffer loss in three kingdoms: First, God shall overthrow for him his enemy, and he shall not be seized by the hand of his enemy. Secondly, God shall make him reign with Him and with His righteousness, and shall make him to sit on His right hand. Thirdly, God shall make him to reign upon earth with glory and joy, and shall direct his kingdom for...</p>
 </li>
 <li>
 <p class="itemTitle">How those who were sent away wept and made a plan</p>
-<p class="itemText">And the children of the nobles of Israel, who were commanded to depart with the son of the king, took counsel together, saying, “What shall we do? For we have left our country and our birth-place, and our kinsfolk and the people of our city. Now, come ye, let us establish a covenant between us only, whereof our kinsfolk shall know nothing, that we will love each other in that country: none shall hasten or tarry here, and we will neither fear nor have any doubt. For God is here, and God is there,...</p>
+<p class="itemText">And the children of the nobles of Israel, who were commanded to depart with the son of the king, took counsel together, saying, “What shall we do? For we have left our country and our birth place, and our kinsfolk and the people of our city. Now, come you, let us establish a covenant between us only, where our kinsfolk shall know nothing, that we will love each other in that country: none shall hasten or linger here, and we will neither fear nor have any doubt. For God is here, and God is there,...</p>
 </li>
 <li>
 <p class="itemTitle">How they made a plan concerning Zion</p>
