Cleanup up to Ch. 50

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -351,23 +351,23 @@
 </li>
 <li>
 <p class="itemTitle">How they made a plan concerning Zion</p>
-<p class="itemText">And while Azâryâs was asleep at night the Angel of the Lord appeared unto him, and said unto him, “Take to thee four goats, each a yearling—now they shall be for your sins, thyself, and ’Êlmeyâs, and ’Abîs, and Mâkrî—and four pure sheep, yearlings also, and an ox whereon no yoke hath ever been laid. And thou shalt offer up the ox as a sacrifice on the east side of her (i.e. Zion), and the sheep and the goats to the right and left thereof, and at the west of it, which is close to its exit. And yo...</p>
+<p class="itemText">And while Azariah was asleep at night the Angel of the Lord appeared to him, and said to him, “Take to you four goats, each a yearling — now they shall be for your sins, yourself, and ’Êlmeyâs, and ’Abîs, and Mâkrî — and four pure sheep, yearlings also, and an ox on which no yoke had ever been laid. And you shall offer up the ox as a sacrifice on the east side of Zion, and the sheep and the goats to the right, and left of it, and at the west of it, which is close to its exit. And your Lord Menye...</p>
 </li>
 <li>
-<p class="itemTitle">Concerning the offering of Azâryâs (Azariah) and the King</p>
-<p class="itemText">And Yôâs (Benaiah), the son of Yôdâḥê, went and told King Solomon, and the King rejoiced over it and commanded them to make ready the altar of offering so that his son might sacrifice. And he brought and gave unto him that which he had vowed to God, one hundred bulls, one hundred oxen, ten thousand sheep, ten thousand goats, and ten of every kind of animal that may be eaten, and ten of every kind of clean bird, so that he might offer libations and sacrifices to the God of Israel; and twenty silv...</p>
+<p class="itemTitle">Concerning the offering of Azariah and the King</p>
+<p class="itemText">And Benaiah, the son of Yôdâḥê, went and told King Solomon, and the King rejoiced over it and commanded them to make ready the altar of offering so that his son might sacrifice. And he brought and gave to him that which he had vowed to God, one hundred bulls, one hundred oxen, ten thousand sheep, ten thousand goats, and ten of every kind of animal that may be eaten, and ten of every kind of clean bird, so that he might offer libations and sacrifices to the God of Israel; and twenty silver sâḥal ...</p>
 </li>
 <li>
 <p class="itemTitle">How they carried away Zion</p>
-<p class="itemText">And behold, the Angel of the Lord appeared again to Azâryâs and he stood up above him like a pillar of fire, and he filled the house with his light. And he raised up Azâryâs and said unto him, “Stand up, be strong, and rouse up thy brother Êlmĕyâs, and ’Abĕsâ, and Mâkarî, and take the pieces of wood and I will open for thee the doors of the sanctuary. And take thou the Tabernacle of the Law of God, and thou shalt carry it without trouble and discomfort. And I, inasmuch as I have been commanded b...</p>
+<p class="itemText">And behold, the Angel of the Lord appeared again to Azariah and he stood up above him like a pillar of fire, and he filled the house with his light. And he raised up Azariah and said to him, “Stand up, be strong, and rouse up your brother Êlmĕyâs, and ’Abĕsâ, and Mâkarî, and take the pieces of wood and I will open for you the doors of the sanctuary. And take the Tabernacle of the Law of God, and you shall carry it without trouble and discomfort. And I, inasmuch as I have been commanded by God to...</p>
 </li>
 <li>
-<p class="itemTitle">How his Father blessed his Son</p>
-<p class="itemText">And then the King of Ethiopia rose up to depart to his country, and he came to his father that he might pray on his behalf, and he said unto him, “Bless me, father”; and he made obeisance unto him. And the King raised him up, and blessed him, and embraced his head, and said, “Blessed be the Lord my God Who blessed my father David, and Who blessed our father Abraham. May He be with thee always, and bless thy seed even as He blessed Jacob, and made his seed to be as many as the stars of heaven and...</p>
+<p class="itemTitle">How his father blessed his son</p>
+<p class="itemText">And then the King of Ethiopia rose up to depart to his country, and he came to his father that he might pray on his behalf, and he said to him, “Bless me, father;” and he made homage to him. And the King raised him up, and blessed him, and embraced his head, and said, “Blessed be the Lord my God Who blessed my father David, and Who blessed our father Abraham. May He be with you always, and bless your descendants even as He blessed Jacob, and made his descendants to be as many as the stars of hea...</p>
 </li>
 <li>
-<p class="itemTitle">How they bade farewell to his Father and how the city mourned</p>
-<p class="itemText">And they bade [the king] farewell and departed. And first of all they set Zion by night upon a wagon together with a mass of worthless stuff, and dirty clothes, and stores of every sort and kind. And [when] all the wagons were loaded, and the masters of the caravan rose up, and the horn was blown, and the city became excited, and the youths shouted loudly, awesomeness crowned it and grace surrounded it (i.e. Zion). And the old men wailed, and the children cried out, and the widows wept, and the ...</p>
+<p class="itemTitle">How they bid farewell to his father and how the city mourned</p>
+<p class="itemText">And they bid the king farewell and departed. And first of all they set Zion by night upon a wagon together with a mass of worthless stuff, and dirty clothes, and stores of every sort and kind. And when all the wagons were loaded, and the masters of the caravan rose up, and the horn was blown, and the city became excited, and the youths shouted loudly, awesomeness crowned and grace surrounded Zion. And the old men wailed, and the children cried out, and the widows wept, and the virgins lamented, ...</p>
 </li>
 <li>
 <p class="itemTitle">How he said unto Zadok the Priest, “Go and bring the Covering (or, Clothing) which is upon it (i.e. Zion)”</p>
