Cleanup up to Ch. 55

--- a/Kebra Negast 202x.scriv/QuickLook/Preview.html
+++ b/Kebra Negast 202x.scriv/QuickLook/Preview.html
@@ -370,24 +370,24 @@
 <p class="itemText">And they bid the king farewell and departed. And first of all they set Zion by night upon a wagon together with a mass of worthless stuff, and dirty clothes, and stores of every sort and kind. And when all the wagons were loaded, and the masters of the caravan rose up, and the horn was blown, and the city became excited, and the youths shouted loudly, awesomeness crowned and grace surrounded Zion. And the old men wailed, and the children cried out, and the widows wept, and the virgins lamented, ...</p>
 </li>
 <li>
-<p class="itemTitle">How he said unto Zadok the Priest, “Go and bring the Covering (or, Clothing) which is upon it (i.e. Zion)”</p>
-<p class="itemText">And he said unto Zadok the priest, “Go, bring that covering which is upon Zion, and take thee this covering which is better than that, and lay it over the two [cherubs] which are below it.” (Now this covering was made of threads of the finest gold wirework twisted together and hammered out into a pattern, and they were not woven like the threads of purple.) “And the five mice which were given to Zion, and the ten figures of their shame (i.e. the emerods) which the nobles of the Philistines made ...</p>
+<p class="itemTitle">How he said to Zadok the Priest, “Go and bring the covering which is upon Zion”</p>
+<p class="itemText">And he said to Zadok the Priest, “Go, bring that covering which is upon Zion, and take this covering which is better than that, and lay it over the two coverings which are below it.” (Now this covering was made of threads of the finest gold wirework twisted together and hammered out into a pattern, and they were not woven like the threads of purple.) “And the five mice which were given to Zion, and the ten figures of their hemorrhoids which the nobles of the Philistines made for their redemption...</p>
 </li>
 <li>
-<p class="itemTitle">How Zadok the Priest Departed</p>
-<p class="itemText">And Zadok the priest went and gave David the covering of Zion, and he delivered unto him all the commands which Solomon had spoken. And David, the son of Solomon, rejoiced because of this, and he marvelled and held himself to be blessed exceedingly, and said, when the covering of the Tabernacle of the Law of God was committed to his charge, “This shall be to me my Lady.” And Azâryâs answered and said before his father, “Thou rejoicest over the covering, but how very much more wilt thou rejoice o...</p>
+<p class="itemTitle">How Zadok the Priest departed</p>
+<p class="itemText">And Zadok the Priest went and gave Menyelek the covering of Zion, and he delivered to him all the commands which Solomon had spoken. And Menyelek, the son of Solomon, rejoiced because of this, and he marveled and held himself to be blessed exceedingly, and said, when the covering of the Tabernacle of the Law of God was committed to his charge, “This shall be to me my Lady.” And Azariah answered and said before his father, “You rejoice over the covering, but how very much more will you rejoice ov...</p>
 </li>
 <li>
-<p class="itemTitle">How the Wagon was given to Ethiopia</p>
-<p class="itemText">And they halted by Gâzâ, the city of the mother of the king, which Solomon the king had given to the Queen of Ethiopia when she came to him. And from there they came in one day to the border of Gĕbĕṣ (Egypt), the name of which is “Mesrîn.” And when the sons of the warriors of Israel saw that they had come in one day a distance of thirteen days’ march, and that they were not tired, or hungry, or thirsty, neither man nor beast, and that they all [felt] that they had eaten and drunk their fill, the...</p>
+<p class="itemTitle">How the wagon was given to Ethiopia</p>
+<p class="itemText">And they halted by Gâzâ, the city of the mother of the king, which Solomon the King had given to the Queen of Ethiopia when she came to him. And from there they came in one day to the border of Egypt, the name of which is “Mesrîn.” And when the sons of the warriors of Israel saw that they had come in one day a distance of thirteen days’ march, and that they were not tired, hungry, or thirsty, neither man nor beast, and that they all felt that they had eaten and drunk their fill, these sons of th...</p>
 </li>
 <li>
-<p class="itemTitle">How David [the King of Ethiopia] Prophesied and Saluted Zion</p>
-<p class="itemText">And King [David] came and stood up before Zion, and he saluted it, and made obeisance thereto, and said, “O Lord God of Israel, to Thee be praise, because Thou doest Thy Will and not the will of men. Thou makest the wise man to forget his wisdom, and Thou destroyest the counsel of the counsellor, and Thou raisest the poor man from the depth, and Thou settest the sole of his foot upon a strong rock. For a full cup of glory is in Thy hand for those who love Thee, and a full cup of shame for those ...</p>
+<p class="itemTitle">How Menyelek the King of Ethiopia prophesied and saluted Zion</p>
+<p class="itemText">And King Menyelek came and stood up before Zion, and he saluted it, and made homage to it, and said, “Oh Lord God of Israel, to You be praise, because You do Your Will and not the will of men. You make the wise man to forget his wisdom, and You destroy the counsel of the counsellor, and You raise the poor man from the depth, and You set the sole of his foot upon a strong rock. For a full cup of glory is in Your hand for those who love You, and a full cup of shame for those who hate You. As for u...</p>
 </li>
 <li>
-<p class="itemTitle">How the People of Ethiopia Rejoiced</p>
-<p class="itemText">And [the people of Ethiopia] took flutes, and blew horns, and [beat] drums, and [played on] pipes, and the Brook of Egypt was moved and astonished at the noise of their songs and their rejoicings; and with them were mingled outcries and shouts of gladness. And their idols, which they had made with their hands and which were in the forms of men, and dogs, and cats, fell down, and the high towers (pylons or obelisks?), and also the figures of birds, [made] of gold and silver, fell down also and we...</p>
+<p class="itemTitle">How the People of Ethiopia rejoiced</p>
+<p class="itemText">And the people of Ethiopia took flutes, and blew horns, and beat drums, and played on pipes, and the Brook of Egypt was moved and astonished at the noise of their songs and their rejoicings; and with them were mingled outcries and shouts of gladness. And their idols (which they had made with their hands and which were in the forms of men, dogs, and cats) fell down, and the high towers, and also the figures of birds, made of gold and silver, fell down also and were broken in pieces. For Zion shon...</p>
 </li>
 <li>
 <p class="itemTitle">Of the Return of Zadok the Priest, and the giving of the gift</p>
